# picsort

./: .dockerignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: folder-manager.tsx  header.tsx  sidebar.tsx  upload-folder-button.tsx
src/components/pages/: gallery.tsx  home.tsx  image-preview.tsx  settings.tsx
src/components/ui/: tooltip.tsx
src/lib/: image-utils.ts
